generated-out/vanilla/dear-imgui-raw-vanilla/cbits/DearImGuiWrappers.h

void ImDrawList_AddTriangle_wrap(ImDrawList* self, ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImU32 col, float thickness);
void ImDrawList_AddTriangleFilled_wrap(ImDrawList* self, ImVec2 const* p1, ImVec2 const* p2, ImVec2 const* p3, ImU32 col);
void ImDrawList_GetClipRectMax_wrap(const ImDrawList* self, ImVec2* _out);
void ImDrawList_GetClipRectMin_wrap(const ImDrawList* self, ImVec2* _out);
void ImDrawList_PathArcTo_wrap(ImDrawList* self, ImVec2 const* center, float radius, float a_min, float a_max, int num_segments);
void ImDrawList_PathArcToFast_wrap(ImDrawList* self, ImVec2 const* center, float radius, int a_min_of_12, int a_max_of_12);
void ImDrawList_PathBezierCubicCurveTo_wrap(ImDrawList* self, ImVec2 const* p2, ImVec2 const* p3, ImVec2 const* p4, int num_segments);
void ImDrawList_PathBezierQuadraticCurveTo_wrap(ImDrawList* self, ImVec2 const* p2, ImVec2 const* p3, int num_segments);
void ImDrawList_PathEllipticalArcTo_wrap(ImDrawList* self, ImVec2 const* center, ImVec2 const* radius, float rot, float a_min, float a_max, int num_segments);
void ImDrawList_PathLineTo_wrap(ImDrawList* self, ImVec2 const* pos);
void ImDrawList_PathLineToMergeDuplicate_wrap(ImDrawList* self, ImVec2 const* pos);
void ImDrawList_PathRect_wrap(ImDrawList* self, ImVec2 const* rect_min, ImVec2 const* rect_max, float rounding, ImDrawFlags flags);
void ImDrawList_PrimQuadUV_wrap(ImDrawList* self, ImVec2 const* a, ImVec2 const* b, ImVec2 const* c, ImVec2 const* d, ImVec2 const* uv_a, ImVec2 const* uv_b, ImVec2 const* uv_c, ImVec2 const* uv_d, ImU32 col);
void ImDrawList_PrimRect_wrap(ImDrawList* self, ImVec2 const* a, ImVec2 const* b, ImU32 col);
void ImDrawList_PrimRectUV_wrap(ImDrawList* self, ImVec2 const* a, ImVec2 const* b, ImVec2 const* uv_a, ImVec2 const* uv_b, ImU32 col);
void ImDrawList_PrimVtx_wrap(ImDrawList* self, ImVec2 const* pos, ImVec2 const* uv, ImU32 col);
void ImDrawList_PrimWriteVtx_wrap(ImDrawList* self, ImVec2 const* pos, ImVec2 const* uv, ImU32 col);
void ImDrawList_PushClipRect_wrap(ImDrawList* self, ImVec2 const* clip_rect_min, ImVec2 const* clip_rect_max, bool intersect_with_current_clip_rect);
void ImDrawList_PushTexture_wrap(ImDrawList* self, ImTextureRef const* tex_ref);
void ImDrawList_PushTextureID_wrap(ImDrawList* self, ImTextureRef const* tex_ref);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);