generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImDrawList.hsc


foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddTriangle_wrap"
  c_imDrawList_AddTriangle :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> CFloat -> IO ()

imDrawList_AddTriangle :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> CFloat -> IO ()
imDrawList_AddTriangle self p1 p2 p3 col thickness =
  with p1 $ \_p1 -> with p2 $ \_p2 -> with p3 $ \_p3 -> c_imDrawList_AddTriangle self _p1 _p2 _p3 col thickness

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_AddTriangleFilled_wrap"
  c_imDrawList_AddTriangleFilled :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_AddTriangleFilled :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_AddTriangleFilled self p1 p2 p3 col =
  with p1 $ \_p1 -> with p2 $ \_p2 -> with p3 $ \_p3 -> c_imDrawList_AddTriangleFilled self _p1 _p2 _p3 col

-- C: void ChannelsMerge(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_ChannelsMerge"
  imDrawList_ChannelsMerge :: (Ptr ImDrawList) -> IO ()
-- C: void ChannelsSetCurrent(ImDrawList* self, int n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_ChannelsSetCurrent"
  imDrawList_ChannelsSetCurrent :: (Ptr ImDrawList) -> CInt -> IO ()
-- C: void ChannelsSplit(ImDrawList* self, int count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_ChannelsSplit"
  imDrawList_ChannelsSplit :: (Ptr ImDrawList) -> CInt -> IO ()
-- C: ImDrawList* CloneOutput(const ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_CloneOutput"
  imDrawList_CloneOutput :: (Ptr ImDrawList) -> IO (Ptr ImDrawList)
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_GetClipRectMax_wrap"
  c_imDrawList_GetClipRectMax :: (Ptr ImDrawList) -> (Ptr ImVec2) -> IO ()

imDrawList_GetClipRectMax :: (Ptr ImDrawList) -> IO ImVec2
imDrawList_GetClipRectMax self =
  alloca $ \_pOut -> c_imDrawList_GetClipRectMax self _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_GetClipRectMin_wrap"
  c_imDrawList_GetClipRectMin :: (Ptr ImDrawList) -> (Ptr ImVec2) -> IO ()

imDrawList_GetClipRectMin :: (Ptr ImDrawList) -> IO ImVec2
imDrawList_GetClipRectMin self =
  alloca $ \_pOut -> c_imDrawList_GetClipRectMin self _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathArcTo_wrap"
  c_imDrawList_PathArcTo :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> CFloat -> CFloat -> CInt -> IO ()

imDrawList_PathArcTo :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> CFloat -> CFloat -> CInt -> IO ()
imDrawList_PathArcTo self center radius a_min a_max num_segments =
  with center $ \_p1 -> c_imDrawList_PathArcTo self _p1 radius a_min a_max num_segments

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathArcToFast_wrap"
  c_imDrawList_PathArcToFast :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> CInt -> CInt -> IO ()

imDrawList_PathArcToFast :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> CInt -> CInt -> IO ()
imDrawList_PathArcToFast self center radius a_min_of_12 a_max_of_12 =
  with center $ \_p1 -> c_imDrawList_PathArcToFast self _p1 radius a_min_of_12 a_max_of_12

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathBezierCubicCurveTo_wrap"
  c_imDrawList_PathBezierCubicCurveTo :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> CInt -> IO ()

imDrawList_PathBezierCubicCurveTo :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> CInt -> IO ()
imDrawList_PathBezierCubicCurveTo self p2 p3 p4 num_segments =
  with p2 $ \_p1 -> with p3 $ \_p2 -> with p4 $ \_p3 -> c_imDrawList_PathBezierCubicCurveTo self _p1 _p2 _p3 num_segments

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathBezierQuadraticCurveTo_wrap"
  c_imDrawList_PathBezierQuadraticCurveTo :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> CInt -> IO ()

imDrawList_PathBezierQuadraticCurveTo :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> CInt -> IO ()
imDrawList_PathBezierQuadraticCurveTo self p2 p3 num_segments =
  with p2 $ \_p1 -> with p3 $ \_p2 -> c_imDrawList_PathBezierQuadraticCurveTo self _p1 _p2 num_segments

-- C: void PathClear(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PathClear"
  imDrawList_PathClear :: (Ptr ImDrawList) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathEllipticalArcTo_wrap"
  c_imDrawList_PathEllipticalArcTo :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> CFloat -> CFloat -> CFloat -> CInt -> IO ()

imDrawList_PathEllipticalArcTo :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> CFloat -> CFloat -> CFloat -> CInt -> IO ()
imDrawList_PathEllipticalArcTo self center radius rot a_min a_max num_segments =
  with center $ \_p1 -> with radius $ \_p2 -> c_imDrawList_PathEllipticalArcTo self _p1 _p2 rot a_min a_max num_segments

-- C: void PathFillConcave(ImDrawList* self, ImU32 col)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PathFillConcave"
  imDrawList_PathFillConcave :: (Ptr ImDrawList) -> ImU32 -> IO ()
-- C: void PathFillConvex(ImDrawList* self, ImU32 col)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PathFillConvex"
  imDrawList_PathFillConvex :: (Ptr ImDrawList) -> ImU32 -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathLineTo_wrap"
  c_imDrawList_PathLineTo :: (Ptr ImDrawList) -> (Ptr ImVec2) -> IO ()

imDrawList_PathLineTo :: (Ptr ImDrawList) -> ImVec2 -> IO ()
imDrawList_PathLineTo self pos =
  with pos $ \_p1 -> c_imDrawList_PathLineTo self _p1

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathLineToMergeDuplicate_wrap"
  c_imDrawList_PathLineToMergeDuplicate :: (Ptr ImDrawList) -> (Ptr ImVec2) -> IO ()

imDrawList_PathLineToMergeDuplicate :: (Ptr ImDrawList) -> ImVec2 -> IO ()
imDrawList_PathLineToMergeDuplicate self pos =
  with pos $ \_p1 -> c_imDrawList_PathLineToMergeDuplicate self _p1

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PathRect_wrap"
  c_imDrawList_PathRect :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> CFloat -> ImDrawFlags -> IO ()

imDrawList_PathRect :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> CFloat -> ImDrawFlags -> IO ()
imDrawList_PathRect self rect_min rect_max rounding flags =
  with rect_min $ \_p1 -> with rect_max $ \_p2 -> c_imDrawList_PathRect self _p1 _p2 rounding flags

-- C: void PathStroke(ImDrawList* self, ImU32 col, ImDrawFlags flags, float thickness)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PathStroke"
  imDrawList_PathStroke :: (Ptr ImDrawList) -> ImU32 -> ImDrawFlags -> CFloat -> IO ()
-- C: void PopClipRect(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PopClipRect"
  imDrawList_PopClipRect :: (Ptr ImDrawList) -> IO ()
-- C: void PopTexture(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PopTexture"
  imDrawList_PopTexture :: (Ptr ImDrawList) -> IO ()
-- C: void PopTextureID(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PopTextureID"
  imDrawList_PopTextureID :: (Ptr ImDrawList) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PrimQuadUV_wrap"
  c_imDrawList_PrimQuadUV :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_PrimQuadUV :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_PrimQuadUV self a b c d uv_a uv_b uv_c uv_d col =
  with a $ \_p1 -> with b $ \_p2 -> with c $ \_p3 -> with d $ \_p4 -> with uv_a $ \_p5 -> with uv_b $ \_p6 -> with uv_c $ \_p7 -> with uv_d $ \_p8 -> c_imDrawList_PrimQuadUV self _p1 _p2 _p3 _p4 _p5 _p6 _p7 _p8 col

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PrimRect_wrap"
  c_imDrawList_PrimRect :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_PrimRect :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_PrimRect self a b col =
  with a $ \_p1 -> with b $ \_p2 -> c_imDrawList_PrimRect self _p1 _p2 col

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PrimRectUV_wrap"
  c_imDrawList_PrimRectUV :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_PrimRectUV :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_PrimRectUV self a b uv_a uv_b col =
  with a $ \_p1 -> with b $ \_p2 -> with uv_a $ \_p3 -> with uv_b $ \_p4 -> c_imDrawList_PrimRectUV self _p1 _p2 _p3 _p4 col

-- C: void PrimReserve(ImDrawList* self, int idx_count, int vtx_count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PrimReserve"
  imDrawList_PrimReserve :: (Ptr ImDrawList) -> CInt -> CInt -> IO ()
-- C: void PrimUnreserve(ImDrawList* self, int idx_count, int vtx_count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PrimUnreserve"
  imDrawList_PrimUnreserve :: (Ptr ImDrawList) -> CInt -> CInt -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PrimVtx_wrap"
  c_imDrawList_PrimVtx :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_PrimVtx :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_PrimVtx self pos uv col =
  with pos $ \_p1 -> with uv $ \_p2 -> c_imDrawList_PrimVtx self _p1 _p2 col

-- C: void PrimWriteIdx(ImDrawList* self, ImDrawIdx idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PrimWriteIdx"
  imDrawList_PrimWriteIdx :: (Ptr ImDrawList) -> ImDrawIdx -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PrimWriteVtx_wrap"
  c_imDrawList_PrimWriteVtx :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> ImU32 -> IO ()

imDrawList_PrimWriteVtx :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> ImU32 -> IO ()
imDrawList_PrimWriteVtx self pos uv col =
  with pos $ \_p1 -> with uv $ \_p2 -> c_imDrawList_PrimWriteVtx self _p1 _p2 col

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PushClipRect_wrap"
  c_imDrawList_PushClipRect :: (Ptr ImDrawList) -> (Ptr ImVec2) -> (Ptr ImVec2) -> CBool -> IO ()

imDrawList_PushClipRect :: (Ptr ImDrawList) -> ImVec2 -> ImVec2 -> CBool -> IO ()
imDrawList_PushClipRect self clip_rect_min clip_rect_max intersect_with_current_clip_rect =
  with clip_rect_min $ \_p1 -> with clip_rect_max $ \_p2 -> c_imDrawList_PushClipRect self _p1 _p2 intersect_with_current_clip_rect

-- C: void PushClipRectFullScreen(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList_PushClipRectFullScreen"
  imDrawList_PushClipRectFullScreen :: (Ptr ImDrawList) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PushTexture_wrap"
  c_imDrawList_PushTexture :: (Ptr ImDrawList) -> (Ptr ImTextureRef) -> IO ()

imDrawList_PushTexture :: (Ptr ImDrawList) -> ImTextureRef -> IO ()
imDrawList_PushTexture self tex_ref =
  with tex_ref $ \_p1 -> c_imDrawList_PushTexture self _p1

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList_PushTextureID_wrap"
  c_imDrawList_PushTextureID :: (Ptr ImDrawList) -> (Ptr ImTextureRef) -> IO ()

imDrawList_PushTextureID :: (Ptr ImDrawList) -> ImTextureRef -> IO ()
imDrawList_PushTextureID self tex_ref =
  with tex_ref $ \_p1 -> c_imDrawList_PushTextureID self _p1

